# pyproject.toml
[project]
name = "strict-project"
version = "0.1.0"
dependencies = [
    "kivy",
    "pytubefix"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W", "F",  # erros, warnings, pyflakes
    "D",            # docstrings
    "TCH",          # type checking
    "ARG",          # argumentos não usados
    "PL",           # pylint
    "B",            # bugbear
    "A",            # flake8-builtins
    "C4",           # flake8-comprehensions
    "ISC",          # implicit string concat
    "UP",           # pyupgrade
    "S",            # bandit (segurança)
    "BLE",          # bleach
    "FLY",          # flynt
    "NPY",          # numpy
    "PERF",         # performance
    "RUF",          # ruff-specific
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88